--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.13.2",
     "flowbite": "^2.5.1",
-    "flowbite-react": "^0.10.1",
+    "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.1"
   }
